Prevent gallery "jumping" when swipe up/down in safari

--- a/view/frontend/web/css/source/components/_gallery.less
+++ b/view/frontend/web/css/source/components/_gallery.less
@@ -214,7 +214,7 @@
         position: fixed;
         z-index: 999;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         padding: 30px;
         box-sizing: border-box;
         background: ~"rgb(var(--base-bg, 255, 255, 255))";
